--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@ericz1803/react-google-calendar": "^4.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-embedded-google-calendar": "^1.0.11",
     "react-router-dom": "^6.1.1",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.0",
