--- a/src/components/menu/happyHour.json
+++ b/src/components/menu/happyHour.json
@@ -1,34 +1,35 @@
 {
     "options": [
         {
-            "item": "Beer",
+            "item": "Menu Item",
             "price": 12,
-            "description": "All draft beer on tap"
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, se do eiusmod tempor incididunt ut labore"
         },
         {
-            "item": "Wine",
-            "price": 10,
-            "description": "Red, white, and sparkling"
+            "item": "Menu Item",
+            "price": 12,
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, se do eiusmod tempor incididunt ut labore"
         },
         {
-            "item": "Cocktails",
+            "item": "Menu Item",
             "price": 12,
-            "description": "All cocktails apply"
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, se do eiusmod tempor incididunt ut labore"
         },
         {
-            "item": "Appetizers",
+            "item": "Menu Item",
             "price": 12,
-            "description": "Tequila and something that isn't"
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, se do eiusmod tempor incididunt ut labore"
         },
         {
-            "item": "Appetizers",
+            "item": "Menu Item",
             "price": 12,
-            "description": "Tequila and something that isn't"
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, se do eiusmod tempor incididunt ut labore"
         },
         {
-            "item": "Appetizers",
+            "item": "Menu Item",
             "price": 12,
-            "description": "Tequila and something that isn't"
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, se do eiusmod tempor incididunt ut labore"
         }
+    
     ]
 }
